Design Edit Task page

--- a/public/prepros.cfg
+++ b/public/prepros.cfg
@@ -189,6 +189,46 @@
             "40b7bc0f"
           ],
           "type": "sass"
+        },
+        "d5f7a2c8": {
+          "id": "d5f7a2c8",
+          "path": "scss/_list.scss",
+          "output": "css/_list.css",
+          "name": "_list.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "40b7bc0f"
+          ],
+          "type": "sass"
+        },
+        "53fcec7d": {
+          "id": "53fcec7d",
+          "path": "scss/_tasks.scss",
+          "output": "css/_tasks.css",
+          "name": "_tasks.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "40b7bc0f"
+          ],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
