Design Login page

--- a/public/prepros.cfg
+++ b/public/prepros.cfg
@@ -176,7 +176,7 @@
           "output": "css/_dashboard.css",
           "name": "_dashboard.scss",
           "category": "CSS",
-          "autoCompile": false,
+          "autoCompile": true,
           "autoprefixer": false,
           "sourceMaps": false,
           "libSass": true,
@@ -184,10 +184,8 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": true,
-          "parents": [
-            "40b7bc0f"
-          ],
+          "imported": false,
+          "parents": [],
           "type": "sass"
         },
         "d5f7a2c8": {
@@ -215,6 +213,26 @@
           "path": "scss/_tasks.scss",
           "output": "css/_tasks.css",
           "name": "_tasks.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "40b7bc0f"
+          ],
+          "type": "sass"
+        },
+        "72bb0b5c": {
+          "id": "72bb0b5c",
+          "path": "scss/_auth.scss",
+          "output": "css/_auth.css",
+          "name": "_auth.scss",
           "category": "CSS",
           "autoCompile": false,
           "autoprefixer": false,
