Design Register page

--- a/public/prepros.cfg
+++ b/public/prepros.cfg
@@ -247,6 +247,45 @@
             "40b7bc0f"
           ],
           "type": "sass"
+        },
+        "90ef7ff1": {
+          "id": "90ef7ff1",
+          "path": "img/etiquettes.png",
+          "output": "img/etiquettes.png",
+          "name": "etiquettes.png",
+          "category": "IMAGE",
+          "size": 1078,
+          "type": "png",
+          "initialSize": 1078,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "3bb06d1d": {
+          "id": "3bb06d1d",
+          "path": "img/projects.png",
+          "output": "img/projects.png",
+          "name": "projects.png",
+          "category": "IMAGE",
+          "size": 612,
+          "type": "png",
+          "initialSize": 612,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "d70fa788": {
+          "id": "d70fa788",
+          "path": "img/responsive.png",
+          "output": "img/responsive.png",
+          "name": "responsive.png",
+          "category": "IMAGE",
+          "size": 592,
+          "type": "png",
+          "initialSize": 592,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
