--- a/public/prepros.cfg
+++ b/public/prepros.cfg
@@ -286,6 +286,149 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "df0c38ee": {
+          "id": "df0c38ee",
+          "path": "img/banner.png",
+          "output": "img/banner.png",
+          "name": "banner.png",
+          "category": "IMAGE",
+          "size": 1226277,
+          "type": "png",
+          "initialSize": 1226277,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "32c08a9e": {
+          "id": "32c08a9e",
+          "path": "scss/_home.scss",
+          "output": "css/_home.css",
+          "name": "_home.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "40b7bc0f"
+          ],
+          "type": "sass"
+        },
+        "b803dd31": {
+          "id": "b803dd31",
+          "path": "img/responsive2.png",
+          "output": "img/responsive2.png",
+          "name": "responsive2.png",
+          "category": "IMAGE",
+          "size": 948,
+          "type": "png",
+          "initialSize": 948,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "bf16b681": {
+          "id": "bf16b681",
+          "path": "img/projects2.png",
+          "output": "img/projects2.png",
+          "name": "projects2.png",
+          "category": "IMAGE",
+          "size": 1021,
+          "type": "png",
+          "initialSize": 1021,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "0c23fc60": {
+          "id": "0c23fc60",
+          "path": "img/etiquettes2.png",
+          "output": "img/etiquettes2.png",
+          "name": "etiquettes2.png",
+          "category": "IMAGE",
+          "size": 1818,
+          "type": "png",
+          "initialSize": 1818,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "e2d31363": {
+          "id": "e2d31363",
+          "path": "img/tablette.png",
+          "output": "img/tablette.png",
+          "name": "tablette.png",
+          "category": "IMAGE",
+          "size": 53306,
+          "type": "png",
+          "initialSize": 53306,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "8d02d35b": {
+          "id": "8d02d35b",
+          "path": "img/mac.png",
+          "output": "img/mac.png",
+          "name": "mac.png",
+          "category": "IMAGE",
+          "size": 28835,
+          "type": "png",
+          "initialSize": 28835,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "ad95ef84": {
+          "id": "ad95ef84",
+          "path": "img/gsm.png",
+          "output": "img/gsm.png",
+          "name": "gsm.png",
+          "category": "IMAGE",
+          "size": 40265,
+          "type": "png",
+          "initialSize": 40265,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "de5ffe1d": {
+          "id": "de5ffe1d",
+          "path": "js/jquery.js",
+          "output": "js/jquery-dist.js",
+          "name": "jquery.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "a0233e7c": {
+          "id": "a0233e7c",
+          "path": "js/script.js",
+          "output": "js/script-dist.js",
+          "name": "script.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
