Modification css + add icons

--- a/public/prepros.cfg
+++ b/public/prepros.cfg
@@ -429,6 +429,136 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "10520cf2": {
+          "id": "10520cf2",
+          "path": "img/icone-date.png",
+          "output": "img/icone-date.png",
+          "name": "icone-date.png",
+          "category": "IMAGE",
+          "size": 406,
+          "type": "png",
+          "initialSize": 406,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "4c68dba5": {
+          "id": "4c68dba5",
+          "path": "img/icon-date.png",
+          "output": "img/icon-date.png",
+          "name": "icon-date.png",
+          "category": "IMAGE",
+          "size": 369,
+          "type": "png",
+          "initialSize": 369,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "31f096df": {
+          "id": "31f096df",
+          "path": "img/icon-desc.png",
+          "output": "img/icon-desc.png",
+          "name": "icon-desc.png",
+          "category": "IMAGE",
+          "size": 245,
+          "type": "png",
+          "initialSize": 245,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "ffc8d8e5": {
+          "id": "ffc8d8e5",
+          "path": "img/icon-delete.png",
+          "output": "img/icon-delete.png",
+          "name": "icon-delete.png",
+          "category": "IMAGE",
+          "size": 196,
+          "type": "png",
+          "initialSize": 196,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "27a891a1": {
+          "id": "27a891a1",
+          "path": "img/icon-edit.png",
+          "output": "img/icon-edit.png",
+          "name": "icon-edit.png",
+          "category": "IMAGE",
+          "size": 240,
+          "type": "png",
+          "initialSize": 240,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "b87fa4b3": {
+          "id": "b87fa4b3",
+          "path": "img/icon-see.png",
+          "output": "img/icon-see.png",
+          "name": "icon-see.png",
+          "category": "IMAGE",
+          "size": 263,
+          "type": "png",
+          "initialSize": 263,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "5d804c68": {
+          "id": "5d804c68",
+          "path": "img/icon-today.png",
+          "output": "img/icon-today.png",
+          "name": "icon-today.png",
+          "category": "IMAGE",
+          "size": 245,
+          "type": "png",
+          "initialSize": 245,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "b3c70416": {
+          "id": "b3c70416",
+          "path": "img/icon-week.png",
+          "output": "img/icon-week.png",
+          "name": "icon-week.png",
+          "category": "IMAGE",
+          "size": 363,
+          "type": "png",
+          "initialSize": 363,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "1a510617": {
+          "id": "1a510617",
+          "path": "img/icon-project.png",
+          "output": "img/icon-project.png",
+          "name": "icon-project.png",
+          "category": "IMAGE",
+          "size": 281,
+          "type": "png",
+          "initialSize": 281,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "eb4b0275": {
+          "id": "eb4b0275",
+          "path": "img/icon-project-edit.png",
+          "output": "img/icon-project-edit.png",
+          "name": "icon-project-edit.png",
+          "category": "IMAGE",
+          "size": 319,
+          "type": "png",
+          "initialSize": 319,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
