Design Show page + create Settings page

--- a/public/prepros.cfg
+++ b/public/prepros.cfg
@@ -559,6 +559,19 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "72dcb861": {
+          "id": "72dcb861",
+          "path": "img/icon-date-2.png",
+          "output": "img/icon-date-2.png",
+          "name": "icon-date-2.png",
+          "category": "IMAGE",
+          "size": 539,
+          "type": "png",
+          "initialSize": 539,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
