Change color theme

--- a/public/prepros.cfg
+++ b/public/prepros.cfg
@@ -572,6 +572,46 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "2bc2fa78": {
+          "id": "2bc2fa78",
+          "path": "scss/_theme-color.scss",
+          "output": "css/_theme-color.css",
+          "name": "_theme-color.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "40b7bc0f"
+          ],
+          "type": "sass"
+        },
+        "e6ff842b": {
+          "id": "e6ff842b",
+          "path": "scss/_settings.scss",
+          "output": "css/_settings.css",
+          "name": "_settings.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "40b7bc0f"
+          ],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
