Change font theme + modif script

--- a/public/prepros.cfg
+++ b/public/prepros.cfg
@@ -612,6 +612,26 @@
             "40b7bc0f"
           ],
           "type": "sass"
+        },
+        "84a72acd": {
+          "id": "84a72acd",
+          "path": "scss/_theme-font.scss",
+          "output": "css/_theme-font.css",
+          "name": "_theme-font.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "40b7bc0f"
+          ],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
