Tags Ajax + modif js

--- a/public/prepros.cfg
+++ b/public/prepros.cfg
@@ -632,6 +632,32 @@
             "40b7bc0f"
           ],
           "type": "sass"
+        },
+        "437ab523": {
+          "id": "437ab523",
+          "path": "img/icon-project-delete.png",
+          "output": "img/icon-project-delete.png",
+          "name": "icon-project-delete.png",
+          "category": "IMAGE",
+          "size": 199,
+          "type": "png",
+          "initialSize": 199,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "49e95d5f": {
+          "id": "49e95d5f",
+          "path": "img/mac2.png",
+          "output": "img/mac2.png",
+          "name": "mac2.png",
+          "category": "IMAGE",
+          "size": 36259,
+          "type": "png",
+          "initialSize": 36259,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
