--- a/public/prepros.cfg
+++ b/public/prepros.cfg
@@ -658,6 +658,26 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "1131522f": {
+          "id": "1131522f",
+          "path": "scss/_responsive.scss",
+          "output": "css/_responsive.css",
+          "name": "_responsive.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "40b7bc0f"
+          ],
+          "type": "sass"
         }
       },
       "deploymentHistory": {},
