--- a/public/prepros.cfg
+++ b/public/prepros.cfg
@@ -678,6 +678,45 @@
             "40b7bc0f"
           ],
           "type": "sass"
+        },
+        "5b2f0d1b": {
+          "id": "5b2f0d1b",
+          "path": "img/icon-hb.png",
+          "output": "img/icon-hb.png",
+          "name": "icon-hb.png",
+          "category": "IMAGE",
+          "size": 141,
+          "type": "png",
+          "initialSize": 141,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "ccb15911": {
+          "id": "ccb15911",
+          "path": "img/icon-setting.png",
+          "output": "img/icon-setting.png",
+          "name": "icon-setting.png",
+          "category": "IMAGE",
+          "size": 489,
+          "type": "png",
+          "initialSize": 489,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "3480de84": {
+          "id": "3480de84",
+          "path": "img/icon-logout.png",
+          "output": "img/icon-logout.png",
+          "name": "icon-logout.png",
+          "category": "IMAGE",
+          "size": 423,
+          "type": "png",
+          "initialSize": 423,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
