--- a/public/prepros.cfg
+++ b/public/prepros.cfg
@@ -479,19 +479,6 @@
           "height": 0,
           "width": 0
         },
-        "b3c70416": {
-          "id": "b3c70416",
-          "path": "img/icon-week.png",
-          "output": "img/icon-week.png",
-          "name": "icon-week.png",
-          "category": "IMAGE",
-          "size": 363,
-          "type": "png",
-          "initialSize": 363,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "1a510617": {
           "id": "1a510617",
           "path": "img/icon-project.png",
@@ -698,6 +685,35 @@
           "size": 43492,
           "type": "png",
           "initialSize": 43492,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "5cf7e162": {
+          "id": "5cf7e162",
+          "path": "css/style-dist.css",
+          "output": "css/style-dist-dist.css",
+          "name": "style-dist.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "b3c70416": {
+          "id": "b3c70416",
+          "path": "img/icon-week.png",
+          "output": "img/icon-week.png",
+          "name": "icon-week.png",
+          "category": "IMAGE",
+          "size": 349,
+          "type": "png",
+          "initialSize": 349,
           "optimized": false,
           "height": 0,
           "width": 0
